# localhost

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  clippy.toml  config.toml  config.yaml  diagram.md  gitify.sh  last_cleanup.txt  makefile  rustfmt.toml  sessions.txt  structure.md
.cargo/: clippy.toml  config.toml  rustfmt.toml
ADL/: ADR_001.md
assets/: header.txt
config/: server.toml
data/: data.json
docs/todos/: audit.todo  instructions.todo  tasks.todo
pages/: index.html
public/: error.html
public/cgi/: explorer.py  python-cgi.py
public/templates/: auth.html  directory_listing.html  error.html  index.html  upload.html  upload_success.html
roadmap/: tasks.todo
scenario1/: Cargo.toml
scenario1/http/src/: httprequest.rs  httpresponse.rs
scenario1/httpserver/src/: handler.rs  main.rs  (+2 more)
scripts/: gitify.sh
src/: lib.rs  loader.rs  main.rs  mux.rs
src/handlers/: errors.rs  server.rs
src/http/: connection.rs  mod.rs  request.rs  response.rs
src/message/: mod.rs  request.rs  response.rs
src/mux/: add.rs  core.rs  events.rs  linux.rs  mac_os.rs  macos.rs  mod.rs  read.rs  remove.rs  run.rs
src/server/: cgi.rs  config.rs  config.toml  config.yml  epoll.rs  getters.rs  handlers.rs  middleware.rs  mod.rs  router.rs  run.rs  server.rs  session.rs  test.rs  validation.rs
src/tests/: mod.rs
src/utils/: chuncked.rs  chunk.rs  constants.rs  errors.rs  functions.rs  globals.rs  macros.rs  mod.rs  timeout.rs
tasks/: audit.todo  tasks.todo
tests/: request_test.rs  response_test.rs
todos/: audit.todo  rules.todo  tasks.todo
(+35 files in other folders)
